--- a/site/public/dashboard/css/home.css
+++ b/site/public/dashboard/css/home.css
@@ -29,7 +29,7 @@ body {
 }
 
 .titulo {
-    font-size: 30pt;
+    font-size: 25pt;
 }
 
 .right-side-window .container {
@@ -133,3 +133,41 @@ body {
     align-items: center;
     text-align: center;
 }
+
+/* Modal */
+/* 
+.modal {
+    height: 100vh;
+    width: 100vw;
+    display: none;
+    background-color: #0000006b;
+    z-index: 100;
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 0 auto;
+}
+
+.modal .caixa {
+    margin-left: 40%;
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal .captura {
+    width: 500px;
+    height: 400px;
+}
+
+.modal .caixa .legenda-captura-modal {
+    height: 60%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+} */
