--- a/site/public/dashboard/css/geral.css
+++ b/site/public/dashboard/css/geral.css
@@ -61,13 +61,13 @@ li {
 }
 
 .left-side-window {
-    width: 15%;
+    width: 12%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-right: #4EABE9 solid 3px;
-    border-radius: 0px 30px 30px 0px;
+    /* border-right: #4EABE9 solid 3px; */
+    /* border-radius: 0px 5px 5px 0px; */
     background-color: #2C2B2B;
     font-weight: 500;
 }
