arrumando campos laterais

--- a/site/public/dashboard/css/computadores.css
+++ b/site/public/dashboard/css/computadores.css
@@ -2,6 +2,10 @@ body {
     color: white;
 }
 
+.destaque {
+    margin-left: 11%;
+}
+
 .right-side-window {
     display: flex;
     justify-content: center;
