--- a/site/public/dashboard/css/computadoresGerenciar.css
+++ b/site/public/dashboard/css/computadoresGerenciar.css
@@ -162,21 +162,14 @@ body {
 }
 
 .modal .caixa {
-    margin-left: 40%;
-    margin-top: 10%;
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
-.modal .adicionar {
-    margin-top: 5%;
-    height: 700px;
-    width: 500px;
-}
-
-.modal .adicionar .form {
+.modal .form {
     height: 70%;
     width: 80%;
     display: flex;
@@ -184,18 +177,18 @@ body {
     justify-content: space-around;
 }
 
-.modal .adicionar .form .formulario{
+.modal .form .formulario{
     height: 16%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.modal .adicionar .form .formulario #add_tipo {
+.modal .form .formulario #add_tipo {
     font-size: 17pt;
 }
 
-.modal .adicionar .form .formulario input {
+.modal .form .formulario input {
     height: 20px;
     padding: 5px;
     font-size: 17pt;
@@ -255,4 +248,16 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+/* ADICIONAR PC */
+.modal .adicionar {
+    margin: auto;
+    margin-top: 5%;
+    height: 700px;
+    width: 800px;
+}
+
+.modal .deletar {
+    margin-top: 10%;
 }
