--- a/site/public/dashboard/css/geral.css
+++ b/site/public/dashboard/css/geral.css
@@ -16,7 +16,7 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
-    background-color: #1a1a1a;
+    background-color: #fff;
 }
 
 button {
@@ -25,9 +25,10 @@ button {
 
 .caixa {
     background-color: #2C2B2B;
-    border: solid 3px #4EABE9;
+    /* border: solid 3px #4EABE9; */
     border-radius: 20px;
     /* box-shadow: 2px 2px 10px #4ea5df75; */
+    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
 }
 
 .container {
