--- a/site/public/dashboard/css/home.css
+++ b/site/public/dashboard/css/home.css
@@ -2,6 +2,15 @@ body {
     color: white;
 }
 
+.box {
+    background-color: white;
+    color: #000000;
+}
+
+.right-side-window nav {
+    color: #000000;
+}
+
 .icone {
     width: 80px;
     height: 80px;
@@ -30,6 +39,22 @@ body {
 
 .titulo {
     font-size: 25pt;
+    font-weight: 700;
+}
+
+nav {
+    margin-top: 25px;
+}
+
+nav .caixa {
+    width: 400px;
+    height: 100px
+}
+
+#caixa2 {
+    color: black;
+    background-color: white;
+    /* box-shadow: none; */
 }
 
 .right-side-window .container {
@@ -49,10 +74,12 @@ body {
 }
 
 .right-side-window .kpi-dados .topo {
-    width: 98%;
-    height: 20%;
+    /* border: solid red; */
+    width: 94%;
+    height: 15%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .right-side-window .kpi-dados .topo .legenda {
@@ -73,7 +100,7 @@ body {
 }
 
 .right-side-window .kpi-dados .kpi-corpo{
-    height: 80%;
+    height: 85%;
     width: 98%;
     display: flex;
     align-items: center;
@@ -90,7 +117,7 @@ body {
 }
 
 .right-side-window .kpi-dados .kpi-corpo .box{
-    border: #000000 solid 3px;
+    /* border: #000000 solid 3px; */
     border-radius: 20px;
     width: 60%;
     padding: 5px;
@@ -99,10 +126,10 @@ body {
     justify-content: space-around;
     font-weight: 700;
     transition: 0.3s ease;
-    box-shadow: 5px 5px 5px #00000080;
+    box-shadow: #00000059 0px 5px 15px;
 }
 
-.right-side-window .kpi-dados .kpi-corpo .box:first-child{
+.right-side-window .kpi-dados .kpi-corpo .primeiro{
     width: 90%;
     height: 45%;
     flex-direction: column;
@@ -111,7 +138,9 @@ body {
 
 .right-side-window .kpi-dados .kpi-corpo .box:hover {
     transition: 0.2s;
-    box-shadow: 5px 10px 10px #2e5c7c75;
+    /* box-shadow: #2e5c7c75 0px 5px 15px; */
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    /* box-shadow: 5px 10px 10px #2e5c7c75; */
     cursor: pointer;
     transform: scale(1.02);
 }
@@ -120,7 +149,7 @@ body {
     width: 100%;
     height: 30%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-bottom: 30px;
 }
 
@@ -171,3 +200,12 @@ body {
     align-items: center;
     text-align: center;
 } */
+
+/* .destaque_caixa {
+    background-color: #4eabe9;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+} */
+
+.grafico {
+    width: 250px;
+}
