--- a/site/public/dashboard/css/computadores.css
+++ b/site/public/dashboard/css/computadores.css
@@ -130,7 +130,7 @@ body {
     width: 30vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     justify-self: center;
     align-self: center;
