--- a/site/public/dashboard/css/analytics.css
+++ b/site/public/dashboard/css/analytics.css
@@ -70,9 +70,14 @@
 
 .kpi .kpiContentTop {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-evenly; 
     align-items: center;
     width: 100%;
+}
+
+.kpi .kpiContentTop #pingText{
+    display: flex;
+    justify-content: flex-start;
 }
 
 .kpi img {
