--- a/site/public/dashboard/css/computadorIndividual.css
+++ b/site/public/dashboard/css/computadorIndividual.css
@@ -1,7 +1,3 @@
-body {
-    color: white;
-}
-
 .left-side-window {
     /* background-color: #16527b;      */
     background-color: #2C2B2B;   
@@ -24,7 +20,6 @@ body {
 }
 
 .pc-info{
-    color: white;
     width: 98%;
     height: 11vh;
     display: flex;
@@ -32,7 +27,8 @@ body {
     justify-content: space-evenly;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-    background-color: #2C2B2B;
+    background-color: #fff;
+    border: solid 2px #2C2B2B;
     /* background-color: #16527b; */
 }
 
@@ -43,6 +39,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-weight: 500;
 }
 
 .contentTitle {
@@ -59,7 +56,6 @@ body {
 .contentTitle span {
     font-size: 1.2rem;
 }
-
 
 .graficos {
     height: 78vh;
@@ -117,7 +113,7 @@ body {
 }
 
 .graficBox {
-    background-color: #ffff;
+    background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;    
     height: 37vh;
     width: 32vw;
@@ -126,11 +122,16 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: solid 2px #2C2B2B;
 }
 
 .titleChart {
-    color: black;
-    width: 26vw;
+    width: 29vw;
+}
+
+.titleChart2 {
+    margin-left: 35px;
+    width: 29vw;
 }
 
 .graficoRosca {
@@ -151,10 +152,9 @@ body {
 }
 
 .porcenRosca {
-    height: 15vh;
+    height: 20vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
     flex-direction: column;
     font-size: 4rem;
     color: black;
