--- a/site/public/dashboard/css/computadorIndividual.css
+++ b/site/public/dashboard/css/computadorIndividual.css
@@ -76,6 +76,173 @@
     width: 36vw;
 }
 
+/* Legenda rede */
+
+.legendaRede {
+    color: #fff;
+    font-size: 1.2rem;
+    position: fixed;
+    left: 48vw;
+    height: 25vh;
+    width: 7vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.legendaRede .containerLegenda {
+    height: 14vh;
+    width: 100%;
+    background-color: #4EABE9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; 
+}
+
+.boxLegenda {
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#verdeL {
+    margin-right: 3px;
+    width: 25px;
+}
+
+.boxLegenda img {
+    width: 30px;
+}
+
+/* Legenda ram */
+
+.legendaRam {
+    color: #fff;
+    font-size: 1.2rem;
+    position: fixed;
+    left: 57vw;
+    top: 34vh;
+    height: 25vh;
+    width: 7vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.legendaRam .containerLegenda {
+    height: 14vh;
+    width: 100%;
+    background-color: #4EABE9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; 
+}
+
+.boxLegenda {
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#verdeL {
+    margin-right: 3px;
+    width: 25px;
+}
+
+.boxLegenda img {
+    width: 30px;
+}
+
+/* Legenda Cpu */
+
+.legendaCpu {
+    color: #fff;
+    font-size: 1.2rem;
+    position: fixed;
+    left: 48vw;
+    height: 25vh;
+    width: 7vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.legendaCpu .containerLegenda {
+    height: 14vh;
+    width: 100%;
+    background-color: #4EABE9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; 
+}
+
+.boxLegenda {
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#verdeL {
+    margin-right: 3px;
+    width: 25px;
+}
+
+.boxLegenda img {
+    width: 30px;
+}
+
+
+
+/* Legenda Disco */
+
+.legendaDisco {
+    color: #fff;
+    font-size: 1.2rem;
+    position: fixed;
+    left: 57vw;
+    top: 75vh;
+    height: 25vh;
+    width: 7vw;;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.legendaDisco .containerLegenda {
+    height: 14vh;
+    width: 100%;
+    background-color: #4EABE9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; 
+}
+
+.boxLegenda {
+    width: 95%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#verdeL {
+    margin-right: 3px;
+    width: 25px;
+}
+
+.boxLegenda img {
+    width: 30px;
+}
+
+
+
+
 .boxLegendaGrafico2 {
     display: flex;
     justify-content: end;
