--- a/site/public/dashboard/css/usuarios.css
+++ b/site/public/dashboard/css/usuarios.css
@@ -8,6 +8,8 @@ body {
 
 .right-side-window .container{
     height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .right-side-window nav {
@@ -15,6 +17,10 @@ body {
     /* padding: 3px 0px; */
     width: 100%;
     height: 10%;
+}
+
+.logoEscura {
+    width: 130px;
 }
 
 .right-side-window .corpo{
