--- a/site/public/dashboard/css/computadoresGerenciar.css
+++ b/site/public/dashboard/css/computadoresGerenciar.css
@@ -2,6 +2,11 @@ body {
     color: white;
 }
 
+.text-erro {
+    font-size: 15pt;
+    color: rgb(226, 68, 68);
+}
+
 .right-side-window {
     font-size: 22pt;
 }
@@ -169,6 +174,7 @@ nav img{
     left: 0;
     top: 0;
     margin: 0 auto;
+    font-size: 20pt;
 }
 
 .modal .caixa {
@@ -181,7 +187,7 @@ nav img{
 
 .modal .form {
     height: 70%;
-    width: 80%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -191,10 +197,10 @@ nav img{
     height: 16%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-around; */
 }
 
-.modal .form .formulario #add_tipo {
+#add_tipo, #add_ram, #add_so {
     font-size: 17pt;
 }
 
@@ -205,7 +211,8 @@ nav img{
 }
 
 .confirmacao_adicionar_usuario {
-    width: 60%;
+    margin-top: 30px;
+    width: 100%;
     height: 10%;
     display: flex;
     justify-content: space-around;
@@ -264,8 +271,12 @@ nav img{
 .modal .adicionar {
     margin: auto;
     margin-top: 5%;
-    height: 700px;
-    width: 800px;
+    height: 800px;
+    width: 600px;
+}
+
+.modal .adicionar .form {
+    height: 80%;
 }
 
 .modal .deletar {
