--- a/site/public/dashboard/css/geral.css
+++ b/site/public/dashboard/css/geral.css
@@ -46,6 +46,10 @@
     align-items: center;
 }
 
+/* .nav-links li:nth-child(1) a#visaoGeral{
+    color: #2C2B2B;
+} */
+
 .nav-links li a i{
     font-size: 22px;
     margin-right: 20px;
@@ -75,25 +79,28 @@
 }
 
 .nav-links li:nth-child(1):hover ~ .active{
-    top: 3%;
+    top: 2.6%;
 }
 
 .nav-links li:nth-child(2):hover ~ .active{
-    top: 23%;
+    top: 18.5%;
 }
 
 .nav-links li:nth-child(3):hover ~ .active{
-    top: 42.5%;
+    top: 35.2%;
 }
 
 .nav-links li:nth-child(4):hover ~ .active{
-    top: 62.5%;
+    top: 51.5%;
 }
 
 .nav-links li:nth-child(5):hover ~ .active{
-    top: 82.5%;
+    top: 68.5%;
 }
 
+.nav-links li:nth-child(6):hover ~ .active{
+    top: 85%;
+}
 
 
 /* RIGHT BAR */
