--- a/site/public/dashboard/css/computadoresGerenciar.css
+++ b/site/public/dashboard/css/computadoresGerenciar.css
@@ -286,3 +286,25 @@ nav img{
 .modal .deletar {
     margin-top: 10%;
 }
+
+.active{
+    background-color: #ffff;
+    width: 110%;
+    height: 47px;
+    position: absolute;
+    left: 0;
+    top: 18.5%;
+    z-index: -1;
+    border-radius: 6px;
+    box-shadow: 0 5px 10px rgba(255, 255, 255, 0.4);
+    display: block;
+    transition: top 0.5s;
+}
+
+.nav-links li:nth-child(2) a{
+    color: #2C2B2B;
+}
+
+#paginaAtual {
+    color: #4EABE9;
+}
