--- a/site/public/dashboard/css/geral.css
+++ b/site/public/dashboard/css/geral.css
@@ -64,6 +64,20 @@
     display: none;
     transition: top 0.5s;
 }
+.activee{
+    background-color: #ffff;
+    width: 110%;
+    height: 47px;
+    position: absolute;
+    left: 0;
+    top: 2.6%;
+    z-index: -1;
+    border-radius: 6px;
+    box-shadow: 0 5px 10px rgba(255, 255, 255, 0.4);
+    display: none;
+    transition: top 0.5s;
+    margin-top: 3%;
+}
 
 .nav-links li:hover a{
     color: #2C2B2B;
